workspace/people/p02-site-reliability-engineer/home/infrastructure/kubernetes/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: northstar-platform
  labels:
    app.kubernetes.io/name: identity
    app.kubernetes.io/part-of: northstar-transit-cloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: identity
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
