workspace/people/p02-site-reliability-engineer/home/infrastructure/kubernetes/identity-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-restricted
  namespace: northstar-platform
  labels:
    app.kubernetes.io/name: identity
    app.kubernetes.io/part-of: northstar-transit-cloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: identity
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: northstar-production
          podSelector:
            matchLabels:
              app.kubernetes.io/name: checkout-svc17
      ports:
        - protocol: TCP
          port: https
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
